// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Checkbox Checked 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <label
    htmlFor={1}
  >
    <input
      checked={true}
      className="sc-fKVqWL hJCfgQ"
      data-element="checkbox"
      disabled={false}
      id={1}
      onChange={[Function]}
      type="checkbox"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox Default 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <label
    htmlFor={1}
  >
    <input
      className="sc-fKVqWL hJCfgQ"
      data-element="checkbox"
      disabled={false}
      id={1}
      onChange={[Function]}
      type="checkbox"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox Error 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <label
    htmlFor={1}
  >
    <input
      className="sc-fKVqWL MtnXg"
      data-element="checkbox"
      disabled={false}
      hasError={true}
      id={1}
      onChange={[Function]}
      type="checkbox"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox Label 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <label
    htmlFor={1}
  >
    <input
      className="sc-fKVqWL hJCfgQ"
      data-element="checkbox"
      disabled={false}
      id={1}
      label="This is example of checkbox with label"
      onChange={[Function]}
      type="checkbox"
    />
    <span>
       
      This is example of checkbox with label
    </span>
  </label>
</div>
`;
